force-app/main/default/objects/Digital_Omni_Channel_Insights__c/Digital_Omni_Channel_Insights__c.object-meta.xml
<CustomObject>
    <label>Digital &amp; Omni-Channel Insights</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Digital &amp; Omni-Channel Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital &amp; Omni-Channel Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>