force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Abandoned_Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Cart_Value__c</fullName>
    <label>Abandoned Cart Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>