force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/App_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Last_Login_Date__c</fullName>
    <label>App Last Login Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>