force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/App_Usage_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Usage_Status__c</fullName>
    <label>App Usage Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>