force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Chatbot_Escalation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Escalation_Rate__c</fullName>
    <label>Chatbot Escalation Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>