force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Chatbot_Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Interaction_Count__c</fullName>
    <label>Chatbot Interaction Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>