force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Coupon_Click_Through_Rate__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Click_Through_Rate__c</fullName>
    <label>Coupon Click-Through Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>