force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Digital &amp; Omni-Channel Insights</relationshipLabel>
    <relationshipName>Digital_Omni_Channel_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>