force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Device_Type_Used_Primary__c.field-meta.xml
<CustomField>
    <fullName>Device_Type_Used_Primary__c</fullName>
    <label>Device Type Used (Primary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>