force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Digital_Coupon_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Digital_Coupon_Usage_Count__c</fullName>
    <label>Digital Coupon Usage Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>