force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Digital_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Digital_Engagement_Score__c</fullName>
    <label>Digital Engagement Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>