force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Digital_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Digital_Lead_Source__c</fullName>
    <label>Digital Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>