force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Digital_Return_Refund_History__c.field-meta.xml
<CustomField>
    <fullName>Digital_Return_Refund_History__c</fullName>
    <label>Digital Return/Refund History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>