force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Email_Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_in_Status__c</fullName>
    <label>Email Opt-in Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>