force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Last_Digital_Interaction_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Digital_Interaction_Channel__c</fullName>
    <label>Last Digital Interaction Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>