force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Omni_Channel_Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Omni_Channel_Interaction_Count__c</fullName>
    <label>Omni-Channel Interaction Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>