force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Online_Appointment_Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Online_Appointment_Booking_Count__c</fullName>
    <label>Online Appointment Booking Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>