force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Online_Browsing_Category_Most_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Online_Browsing_Category_Most_Viewed__c</fullName>
    <label>Online Browsing Category (Most Viewed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>