force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Online_Browsing_Time_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Online_Browsing_Time_Last_30_Days__c</fullName>
    <label>Online Browsing Time (Last 30 Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>