force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Online_Payment_Preference__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Preference__c</fullName>
    <label>Online Payment Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>