force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Platform_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Platform_Funnel_Stage__c</fullName>
    <label>Platform Funnel Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>