force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Preferred_Digital_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Digital_Channel__c</fullName>
    <label>Preferred Digital Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>