force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Store_Visit_After_Digital_Browsing__c.field-meta.xml
<CustomField>
    <fullName>Store_Visit_After_Digital_Browsing__c</fullName>
    <label>Store Visit After Digital Browsing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>