force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Web_Portal_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Last_Login_Date__c</fullName>
    <label>Web Portal Last Login Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>