force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/WhatsApp_Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Opt_in_Status__c</fullName>
    <label>WhatsApp Opt-in Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>