force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Wishlist_Contains_High_Value_Item__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_Contains_High_Value_Item__c</fullName>
    <label>Wishlist Contains High-Value Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>