force-app/main/default/objects/Digital_Omni_Channel_Insights__c/fields/Wishlist_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_Item_Count__c</fullName>
    <label>Wishlist Item Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>